# ai_voice_chatbot

./: Setting up amazon chime sdk with Connect.docx
aws-agentcore-webrtc/: .gitignore  README.md  pyproject.toml
aws-agentcore-webrtc-kvs/: README.md  pyproject.toml
aws-agentcore-webrtc-kvs/agent/: env.example  pipecat-agent.py  pyproject.toml
aws-agentcore-webrtc-kvs/scripts/: configure.sh  destroy.sh  launch.sh  launch_backup.sh  setup-iam-role.sh  setup-vpc.sh
aws-agentcore-webrtc-kvs/server/: env copy.example  env.example  server.py
aws-agentcore-webrtc/agent/: env  env.example  pipecat-agent.py  pipecat-agent_nonltf.py  pyproject.toml
aws-agentcore-webrtc/scripts/: cleanup-vpc.sh  configure.sh  launch.sh  setup-iam-role.sh  setup-vpc.sh
aws-agentcore-webrtc/server/: env.example  server.py
bridge_pbx_voice_connector_webrtc_kvs_agentcore_python/: .env  agentcore_logs.txt  bridge.py  env.example  pyproject.toml  uv_run_for_agent.txt
bridge_pbx_voice_connector_ws_agentcore_python/: .env  .env.example  Dockerfile  README.md  bridge.py  ip_table_commands.txt  pyproject.toml  requirements.txt  ws_bridge_v2.py
connect_sma_handler/: lambda_handler.mjs
lambda functions/: connect_session_metadata_handler.mjs  sma_event_hander_to_audio_connector.py  sma_event_handler_direct_pass_to_kvs_or_kds.py
not_working_voice_connector_to_pipecat_bridge_python/: .env  bridge.py  pyproject.toml  requirements.txt
not_working_voice_connector_to_websocket_bridge_ts/: README.md
pipecat_websocket/aws-agentcore-websocket/: pyproject.toml  test_websocket.py  test_websocket_with_auth.py
pipecat_websocket/aws-agentcore-websocket/agent/: .env  agent.py  agent.py_non_ltf_weather_backup  env.example  ltf_agent.py  ltf_agent_elevenlabs.py  ltf_agent_lex.py  pyproject.toml
pipecat_websocket/aws-agentcore-websocket/client/src/: app.ts
pipecat_websocket/aws-agentcore-websocket/scripts/: configure.sh  launch.sh
pipecat_websocket/aws-agentcore-websocket/server/: .env  .env.bak  pyproject.toml  server.py
(+26 files in other folders)
