[project]
name = "agentcore-pipecat-webrtc-kvs-bridge"
version = "0.1.0"
description = "bridging between voice connector and Pipecat bot agent for Amazon Bedrock AgentCore with KVS managed TURN"
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "boto3",
    "bedrock-agentcore",
    "pipecat-ai[aws,webrtc,silero,openai,cartesia,runner,elevenlabs]>=0.0.103",
]