[project]
name = "bridge-pbx-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "audioop-lts==0.2.2",
    "boto3",
    "botocore",
    "jmespath==1.1.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.2.1",
    "six==1.17.0",
    "urllib3==2.6.3",
    "websockets>=15.0.1",
    "s3transfer>=0.16.1"
]
