[project]
name = "agentcore-pipecat-websocket"
version = "0.1.0"
description = "Example for building Pipecat bots deployable to Amazon Bedrock AgentCore using WebSockets for communication"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[aws,cartesia,daily,deepgram,local-smart-turn-v3,runner,silero,websocket]>=1.0.0",
    "protobuf==6.31.1",
]

[dependency-groups]
dev = [
    "bedrock-agentcore-starter-toolkit",
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
    "protobuf==6.31.1"
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
